--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@zegocloud/zego-uikit-prebuilt": "^1.11.0",
+    "axios": "^1.6.8",
     "face-api.js": "^0.22.2",
+    "firebase": "^10.9.0",
     "moment": "^2.30.1",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
