--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-top-loading-bar": "^2.3.1",
     "react-webcam": "^7.2.0",
     "redux-persist": "^6.0.0",
